# SwarmCloneDesktop

./: .gitignore  App.axaml  App.axaml.cs  Program.cs  README.md  SwarmCloneDesktop.csproj  SwarmCloneDesktop.slnx  ViewLocator.cs  app.manifest  index.html  live2d.html  package-lock.json  package.json  requirements.txt  vite.config.ts
.github/workflows/: build.yml  release.yml
ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
Views/: MainWindow.axaml  MainWindow.axaml.cs
launcher/: Cargo.toml  build.rs
launcher/res/: windows.rc
launcher/src/: main.rs
scripts/: build.py
src/: App.vue  main.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/assets/i18n/: index.json
src/assets/i18n/lang/: zh_CN.properties
src/assets/icons/: app.icns
src/components/TitleBar/: TitleBar.less  TitleBar.vue
src/electron/: main.js  preload.js
src/live2d/: App.vue  global.css  main.ts
src/live2d/componets/: TitleBar.vue
src/main/: App.vue
src/models/: app_state.py  config.py  data_manager.py  theme_manager.py
src/utils/: get_assets.py
src/views/: __init__.py  base_view.py  home_views.py  settings_views.py
src/windows/: live2d_window.py  main_window.py
