[package]
name = "SwarmCloneDesktop"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[[bin]]
name = "SwarmCloneDesktop"
path = "src/main.rs"

[dependencies]
chrono = "0.4.42"
sysinfo = "0.37.1"
encoding_rs = "0.8.35"
encoding_rs_io = "0.1.7"
msgbox= "0.7.0"

[profile.release]
opt-level = 3
lto = true           # 全程序链接时优化
strip = true         # 去掉符号表

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"